finished sorter assignment